--- a/public/project/attention/index.html
+++ b/public/project/attention/index.html
@@ -83,7 +83,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/academic.min.672b407af61de2aa7c3ffac7290fec09.css">
+  <link rel="stylesheet" href="/css/academic.min.520fc5f30e3665fe48df3b6f5944a56a.css">
 
   
 
@@ -640,7 +640,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="/">Alexandra Decker</a></h5>
       <h6 class="card-subtitle">PhD Candidate, University of Toronto</h6>
-      <p class="card-text">My research focuses on understanding fluctuations in sustained attention and their influence on different learning systems.</p>
+      <p class="card-text">My research focuses on understanding fluctuations in sustained attention and their influence on different learning systems. hfghgf</p>
       <ul class="network-icon" aria-hidden="true">
   
     
