--- a/public/talk/example/index.html
+++ b/public/talk/example/index.html
@@ -712,7 +712,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="/">Alexandra Decker</a></h5>
       <h6 class="card-subtitle">PhD Candidate, University of Toronto</h6>
-      <p class="card-text">My research focuses on understanding fluctuations in sustained attention and their influence on different learning systems. hfghgf</p>
+      <p class="card-text">My research focuses on understanding fluctuations in sustained attention and their influence on different learning systems.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
