--- a/public/index.html
+++ b/public/index.html
@@ -559,7 +559,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD in Psychology sdfadsfsjflds;ljfkl;dasjfklds, 2016-present</p>
+              <p class="course">PhD in Psychology, 2016-present</p>
               <p class="institution">University of Toronto</p>
             </div>
           </li>
