--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -576,7 +576,7 @@
 
 
   
-  <span><a href="/authors/alexandra-decker/">Alexandra Decker</a></span>, <span><a href="/authors/katherine-duncan/">Katherine Duncan*</a></span>, <span><a href="/authors/amy-finn/">Amy Finn*</a></span>
+  <span><a href="/authors/alexandra-decker/">Alexandra Decker</a></span>, <span><a href="/authors/katherine-duncan/">Katherine Duncan*</a></span>, <span><a href="/authors/amy-finn/">Amy Finn*</a></span>, <span><a href="/authors/donald-mabbott/">Donald Mabbott*</a></span>
 
       </div>
       
