--- a/public/index.html
+++ b/public/index.html
@@ -542,7 +542,9 @@
     
     <h1>About me</h1>
 
-    <p>I&rsquo;m a PhD Candidate at the University of Toronto working with <a href="http://duncanlab.org/index.php/people/">Katherine Duncan</a> and <a href="https://finnlandlab.org/">Amy Finn</a>. I’m curious about the brain mechanisms that support attention and learning as well as how attentional and motivational states influence learning. I’m also interested in how learning and attention mechanisms differ as a result of brain structure, age, experience, and environmental contexts. Get in touch if you&rsquo;d like to chat about ideas or collaborate! Find more details about my research by looking through my site, or <a href="/files/cv.pdf"> downloading my CV</a>. Check out my <a href = "https://scholar.google.com/citations?hl=en&user=T5Xw7kUAAAAJ&view_op=list_works&sortby=pubdate" >google scholar</a> profile for a list of my publications.</p>
+    <p>Hi there! I&rsquo;m Lexi, a postdoc at the Massachusetts Institute of Technology working with John Gabrieli. I research how we attend, learn and remember, and am particularly interested in dynamic changes in these aspects of cognition across time. Why is it sometimes so hard to attend, learn and remember? Why is it something so easy? And how can we increase the frequency of good cognitive states? By deciphering the factors that modulate cognitive processes in each moment, I aim to develop methods to improve cognition in both healthy and clinical samples.</p>
+
+<p>Get in touch if you&rsquo;d like to chat about ideas or collaborate! Find more details about my research by looking through my site, or <a href="/files/cv.pdf"> downloading my CV</a>. Check out my <a href = "https://scholar.google.com/citations?hl=en&user=T5Xw7kUAAAAJ&view_op=list_works&sortby=pubdate" >google scholar</a> profile for a list of my publications.</p>
 
 
     <div class="row">
