--- a/public/index.html
+++ b/public/index.html
@@ -850,7 +850,7 @@
 
 <div class="view-list-item">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-  <a href="/publication/2023_psychonomic/" >Fluctuations in Sustained Attention Explain Moment-to-Moment Shifts in Children’s Memory Formation (2023)</a>
+  <a href="/publication/2023_psychonomic/" >Pay Attention and you might miss it. greater learning during attentional lapses (2023)</a>
 
   
 
@@ -861,7 +861,7 @@
 
 
   
-  <span><a href="/authors/alexandra-decker/">Alexandra Decker</a></span>, <span><a href="/authors/katherine-duncan/">Katherine Duncan</a></span>, <span><a href="/authors/amy-finn/">Amy Finn</a></span>
+  <span><a href="/authors/alexandra-decker/">Alexandra Decker</a></span>, <span><a href="/authors/michael-dubois/">Michael Dubois</a></span>, <span><a href="/authors/katherine-duncan/">Katherine Duncan</a></span>, <span><a href="/authors/amy-finn/">Amy Finn</a></span>
 
   </div>
   
