--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -569,7 +569,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/2023_psychonomic/" >Fluctuations in Sustained Attention Explain Moment-to-Moment Shifts in Children’s Memory Formation (2023)</a>
+      <a href="/publication/2023_psychonomic/" >Pay Attention and you might miss it. greater learning during attentional lapses (2023)</a>
     </h3>
 
     
@@ -589,7 +589,7 @@
 
 
   
-  <span><a href="/authors/alexandra-decker/">Alexandra Decker</a></span>, <span><a href="/authors/katherine-duncan/">Katherine Duncan</a></span>, <span><a href="/authors/amy-finn/">Amy Finn</a></span>
+  <span><a href="/authors/alexandra-decker/">Alexandra Decker</a></span>, <span><a href="/authors/michael-dubois/">Michael Dubois</a></span>, <span><a href="/authors/katherine-duncan/">Katherine Duncan</a></span>, <span><a href="/authors/amy-finn/">Amy Finn</a></span>
 
       </div>
       
