--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -569,12 +569,12 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/2023_psychonomic/" >Pay Attention and you might miss it. greater learning during attentional lapses (2023)</a>
+      <a href="/publication/2023_psychonomic/" >Pay Attention and you might miss it Greater learning during attentional lapses (2023)</a>
     </h3>
 
     
     <div class="article-style">
-      Why do children’s memories often differ from adults’ after the same experience? Whereas prior work has focused on immature memory …
+      Attentional lapses have been found to impair everything from basic perception to learning and memory. Yet, despite the well documented …
     </div>
     
 
