--- a/public/index.html
+++ b/public/index.html
@@ -850,7 +850,7 @@
 
 <div class="view-list-item">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-  <a href="/publication/2023_psychonomic/" >Pay Attention and you might miss it. greater learning during attentional lapses (2023)</a>
+  <a href="/publication/2023_psychonomic/" >Pay Attention and you might miss it Greater learning during attentional lapses (2023)</a>
 
   
 
