--- a/public/publication/2023_psych_science/index.html
+++ b/public/publication/2023_psych_science/index.html
@@ -454,8 +454,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/Decker_2023_Psych_Science.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
