--- a/public/publication/2023_psychonomic/index.html
+++ b/public/publication/2023_psychonomic/index.html
@@ -454,8 +454,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/2023_Decker_psychonomic.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
