--- a/public/publication/2024_journal_neuroscience/index.html
+++ b/public/publication/2024_journal_neuroscience/index.html
@@ -437,6 +437,8 @@
 
 
 
+  
+
 
 
 
@@ -454,12 +456,10 @@
 
 
   
-    
-  
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="/Decker_2024.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/2024_journal_neuroscience/2024_journal_neuroscience.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
