--- a/public/index.html
+++ b/public/index.html
@@ -395,7 +395,7 @@
   
   
 
-  <section id="demo" class="home-section wg-blank dark  bg-image parallax " style="background-image:  url(&#39;/img/FullSizeRender.jpeg&#39;);background-size: auto;background-position: center;padding: 300px 0 300px 0;" >
+  <section id="demo" class="home-section wg-blank dark  bg-image parallax " style="background-image:  url(&#39;/img/FullSizeRender.jpg&#39;);background-size: auto;background-position: center;padding: 300px 0 300px 0;" >
     <div class="container">
       
 
