--- a/public/404.html
+++ b/public/404.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Postdoctoral Fellow, Massachusetts Institute of Technology">
+  <meta name="description" content="Massachusetts Institute of Technology">
 
   
   <link rel="alternate" hreflang="en-us" href="/404.html">
@@ -116,7 +116,7 @@
   <meta property="og:site_name" content="Alexandra Decker">
   <meta property="og:url" content="/404.html">
   <meta property="og:title" content="404 Page not found | Alexandra Decker">
-  <meta property="og:description" content="Postdoctoral Fellow, Massachusetts Institute of Technology"><meta property="og:image" content="/img/icon-192.png">
+  <meta property="og:description" content="Massachusetts Institute of Technology"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
     
