--- a/public/publication/subfield-paper/index.html
+++ b/public/publication/subfield-paper/index.html
@@ -689,7 +689,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="/">Alexandra Decker</a></h5>
-      <h6 class="card-subtitle">Postdoctoral Fellow, Massachusetts Institute of Technology</h6>
+      <h6 class="card-subtitle">Massachusetts Institute of Technology</h6>
       <p class="card-text">Developmental Cognitive Neuroscientist studying how brain and cognitive development shape learning in typical and atypical development.</p>
       <ul class="network-icon" aria-hidden="true">
   
