--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -117,7 +117,7 @@
   
   <meta property="og:site_name" content="Alexandra Decker">
   <meta property="og:url" content="/publication/">
-  <meta property="og:title" content="Selected Publications (for a full list, check out my google scholar!) | Alexandra Decker">
+  <meta property="og:title" content="Selected Publications (see my google scholar for a full list) | Alexandra Decker">
   <meta property="og:description" content="Massachusetts Institute of Technology"><meta property="og:image" content="/img/icon-192.png">
   <meta property="twitter:image" content="/img/icon-192.png"><meta property="og:locale" content="en-us">
   
@@ -138,7 +138,7 @@
 
 
 
-  <title>Selected Publications (for a full list, check out my google scholar!) | Alexandra Decker</title>
+  <title>Selected Publications (see my google scholar for a full list) | Alexandra Decker</title>
 
 </head>
 
@@ -333,7 +333,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Selected Publications (for a full list, check out my google scholar!)</h1>
+  <h1>Selected Publications (see my google scholar for a full list)</h1>
 
   
 
