--- a/public/index.html
+++ b/public/index.html
@@ -479,7 +479,7 @@
     <h1>About me</h1>
 
     <p>I&rsquo;m a developmental cognitive neuroscientist. I&rsquo;m currently a postdoctoral fellow at the Massachusetts Institute of Technology in the Department of Brain and Cognitive Sciences. I completed my PhD in Cognitive Neuroscience at the University of Toronto in 2022. My research uses a combination of behavioral, eye-tracking, and neuroimaging methods, computational modelling and advanced statistics to examine how the brain changes over the course of development and how these changes influence learning in children with and without neurodevelopmental disorders. I&rsquo;m particularly interested in short- and long-term brain plasticity in response to learning, and environmental adversity or enrichment. When I&rsquo;m not working, I love drinking matcha, going on runs, reading philosophy and hanging out with loved ones. Reach out if you&rsquo;d like to chat about ideas or collaborate!</p>
-<p>Feel free to check out more of my work by looking through my site, or <!-- raw HTML omitted --> downloading my CV<!-- raw HTML omitted -->. Check out my <!-- raw HTML omitted -->google scholar<!-- raw HTML omitted --> profile for a list of my publications.</p>
+<p>Feel free to check out more of my work by looking through my site, or <!-- raw HTML omitted --> downloading my CV<!-- raw HTML omitted -->. Check out my <!-- raw HTML omitted -->google scholar<!-- raw HTML omitted --> profile for a list of my publications. You can email me at <a href="mailto:adecker@mit.edu">adecker@mit.edu</a>.</p>
 
 
     <div class="row">
@@ -659,10 +659,6 @@
   
 
 
-
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/2024_journal_neuroscience/2024_journal_neuroscience.pdf" target="_blank" rel="noopener">
-  PDF
-</a>
 
 
 
